src/test/ui/suggestions/path-display.stderr
error[E0277]: `Path` doesn't implement `std::fmt::Display`
  --> $DIR/path-display.rs:5:20
   |
LL |     println!("{}", path);
   |                    ^^^^ `Path` cannot be formatted with the default formatter; call `.display()` on it
   |
   = help: the trait `std::fmt::Display` is not implemented for `Path`
   = note: call `.display()` or `.to_string_lossy()` to safely print paths, as they may contain non-Unicode data
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
